gcc/testsuite/rust/rustc/ui/issues/issue-38954.rs
fn _test(ref _p: str) {}
// { dg-error ".E0277." "" { target *-*-* } .-1 }

fn main() { }

